k8s/book-x-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: book-x
  labels:
    app: book-x-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: book-x-app
  template:
    metadata:
      labels:
        app: book-x-app
    spec:
      containers:
        - name: book-x-app
          image: book-exchange-service:0.1
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: book-x-app-service
spec:
  selector:
    app: book-x-app
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30080
